Added main html skeleton

--- a/index.html
+++ b/index.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html>
+  <head>
+    <title>Study with Ann</title>
+    <link rel="stylesheet" href="style/navigation.css" />
+    <link rel="stylesheet" href="style/body_header.css">
+    <link rel="preconnect" href="style/https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Arsenal:wght@400;700&family=Qwigley&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pompiere&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="logo">
+        <p>mathAnka</p>
+      </div>
+      <div class="dropdown">
+        <ul>
+          <li><a href="#aboutMe">O mnie</a></li>
+          <li><a href="#aboutCourse">O kursie</a></li>
+          <li><a href="#priceList">Cennik</a></li>
+          <li><a href="#form">Formularz</a></li>
+          <li><a href="#contact">Kontakt</a></li>
+        </ul>
+      </div>
+    </nav>
+  
+    <div class="body-header">
+      <div class="body-header-title">
+        <div class="body-header-title-hello">
+          <h1>Hello!</h1>
+          <h2>Nazywam się Ania Żak i jestem tu aby pomóc w zrozumieniu matematyki.</h2>
+        </div>
+      </div>
+      <div class="body-header-photo">
+        <div class="body-header-photo-div">
+        </div>
+        <!--<img src="img/AnnaZak.jpg">-->
+      </div>
+    </div>
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>CodersCamp | Projekt 1 - HTML i CSS</title>
-    <meta name="description" content="CodersCamp to darmowy, otwarty kurs programowania webowego we Wrocławiu. Sprawdź, czego nauczysz się na CodersCamp i spróbuj swoich sił w branży IT!">
-
-</head>
-
-<body>
-
-<p>CodersCamp - projekt 1. Tutaj możesz zacząć swoją zabawę!</p>
-
-</body>
+  </body>
 </html>
