--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
     <nav class="navbar">
       <div class="logo">
         <p>mathAnka</p>
-      </div>
+      </div>  
       <div class="dropdown">
+        <div class = "dropbtn">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
         <ul>
           <li><a href="#aboutMe">O mnie</a></li>
           <li><a href="#aboutCourse">O kursie</a></li>
@@ -33,13 +38,13 @@
         
         <div class="body-header-title-social-media">
           <a href="https://www.linkedin.com/in/anna-%C5%BCak-575233140/" target="_blank">
-            <i class="fab fa-linkedin-in social-icons"></i>
+            <i class="fab fa-linkedin-in social-icons social-icons-animation"></i>
           </a>
           <a href="https://github.com/AnnZak" target="_blank">
-            <i class="fab fa-github social-icons"></i>
+            <i class="fab fa-github social-icons social-icons-animation"></i>
           </a>
           <a href="https://www.facebook.com/ania.zak.37" target="_blank">
-            <i class="fab fa-facebook-f social-icons facebook-icon"></i>
+            <i class="fab fa-facebook-f social-icons facebook-icon social-icons-animation"></i>
           </a>
         </div>
       </div>
@@ -217,6 +222,9 @@
           <a href="https://www.facebook.com/ania.zak.37" target="_blank">
             <i class="fab fa-facebook-f social-icons facebook-icon"></i>
           </a>
+        </div>
+        <div>Wykonano przez Anna Żak jako projekt zaliczeniowy na CodersCamp bazując na projekcie 
+          <a href="https://www.behance.net/gallery/104625429/Landing-Page-for-english-tutor?tracking_source=search_projects_recommended%7Ctutor%20Landing%20Page">Ксения Подымова</a>
         </div>
       </div>
     </section>
