--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Strona stworzona na potrzeby zaliczenia projektu kursu CodersCamp."/>
+    <meta name="keywords" content="mathAnka, korepetycje z matematyki, css, html, matematyka" />
+    <meta http-equiv="content-language" content="pl" />
+    <meta name="robots" content="all" />
     <title>Study with Ann</title>
     <link rel="stylesheet" href="styles/main.css" />
     <link href="https://fonts.googleapis.com/css2?family=Arsenal:wght@400;700&family=Qwigley&display=swap" rel="stylesheet">
