--- a/index.html
+++ b/index.html
@@ -185,8 +185,6 @@
       </div>
     </section>
 
-
-
     <section id="form">
       <h2>Zainteresowała Cię moja oferta?</h2>
       <p>Zostaw wiadomość i czekaj na szybką odpowiedź</p>
@@ -203,7 +201,6 @@
         <div class="form-wrapper">
           <label class="form-label" for="comments">
             <textarea class="form-comments" id="comments" placeholder="Wiadomość" rows="6"></textarea>
-            
           </label> 
         </div>
        </form>
@@ -228,7 +225,7 @@
             <i class="fab fa-facebook-f social-icons facebook-icon"></i>
           </a>
         </div>
-        <div>Wykonano przez Anna Żak jako projekt zaliczeniowy na CodersCamp bazując na projekcie 
+        <div class="footer-path">Wykonano przez Anna Żak jako projekt zaliczeniowy na CodersCamp bazując na projekcie 
           <a href="https://www.behance.net/gallery/104625429/Landing-Page-for-english-tutor?tracking_source=search_projects_recommended%7Ctutor%20Landing%20Page">Ксения Подымова</a>
         </div>
       </div>
